# contracts/openapi.json
@@ -14,6 +14,10 @@
           "form_schema_id": {
             "title": "Form Schema Id",
             "type": "string"
+          },
+          "privacy_mode": {
+            "$ref": "#/components/schemas/PrivacyMode",
+            "default": "none"
           }
         },
         "required": [
@@ -65,6 +69,9 @@
             "title": "Form Schema Id",
             "type": "string"
           },
+          "privacy_mode": {
+            "$ref": "#/components/schemas/PrivacyMode"
+          },
           "status": {
             "$ref": "#/components/schemas/CaseStatus"
           }
@@ -72,7 +79,8 @@
         "required": [
           "case_id",
           "form_schema_id",
-          "status"
+          "status",
+          "privacy_mode"
         ],
         "title": "CreateCaseResponse",
         "type": "object"
@@ -257,6 +265,15 @@
         ],
         "title": "FormSchemasResponse",
         "type": "object"
+      },
+      "PrivacyMode": {
+        "enum": [
+          "none",
+          "full_tokenize",
+          "policy_engine"
+        ],
+        "title": "PrivacyMode",
+        "type": "string"
       },
       "Progress": {
         "properties": {
